--- a/layouts/partials/header.html
+++ b/layouts/partials/header.html
@@ -6,22 +6,20 @@
         <span>UPSC Vision Prep</span>
       </a>
       
-      <button class="mobile-toggle" aria-label="Toggle navigation">
+      <button class="mobile-menu-toggle" aria-label="Toggle navigation">
         <i class="fas fa-bars"></i>
       </button>
       
-      <div class="nav-menu">
-        <ul class="nav-links">
-          {{ range .Site.Menus.main }}
-          <li><a href="{{ .URL }}" class="nav-link">{{ .Name }}</a></li>
-          {{ end }}
-        </ul>
+      <ul class="nav-menu">
+        {{ range .Site.Menus.main }}
+        <li><a href="{{ .URL }}" class="nav-link {{ if $.IsMenuCurrent "main" . }}active{{ end }}">{{ .Name }}</a></li>
+        {{ end }}
         
-        <div class="nav-buttons">
+        <li class="nav-buttons">
           <a href="#" class="btn btn-outline btn-sm">Log In</a>
           <a href="/courses/" class="btn btn-primary btn-sm">Get Started</a>
-        </div>
-      </div>
+        </li>
+      </ul>
     </nav>
   </div>
 </header>
