--- a/layouts/_default/baseof.html
+++ b/layouts/_default/baseof.html
@@ -40,7 +40,7 @@
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css" integrity="sha512-iecdLmaskl7CVkqkXNQ/ZH/XLlvWZOJyj7Yy7tcenmpD1ypASozpmT/E0iPtmFIB46ZmdtAc9eNBvH0H/ZpiBw==" crossorigin="anonymous" referrerpolicy="no-referrer" />
   
   <!-- Stylesheet -->
-  <link rel="stylesheet" href="/css/style.css">
+  <link rel="stylesheet" href="/css/style.css?v=2.0">
   
   {{ block "head" . }}{{ end }}
 </head>
@@ -54,7 +54,7 @@
   {{ partial "footer.html" . }}
   
   <!-- Scripts -->
-  <script src="/js/main.js"></script>
+  <script src="/js/main.js?v=2.0"></script>
   {{ block "scripts" . }}{{ end }}
 </body>
 </html>
